--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile files('libs/xUtils-2.6.2.jar')
     compile files('libs/android-async-http-1.4.3.jar')
+    compile files('libs/universal-image-loader-1.8.6-with-sources.jar')
 }
