--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     compile files('libs/xUtils-2.6.2.jar')
     compile files('libs/android-async-http-1.4.3.jar')
     compile files('libs/universal-image-loader-1.8.6-with-sources.jar')
+    compile files('libs/gradle-wrapper.jar')
+    compile 'com.jude:rollviewpager:1.2.9'
 }
