--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.AppDetailsActvity"></activity>
+        <activity android:name=".activity.CollectActivity"></activity>
     </application>
 
 </manifest>
