--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile files('libs/universal-image-loader-1.8.6-with-sources.jar')
     compile files('libs/gradle-wrapper.jar')
     compile 'com.jude:rollviewpager:1.2.9'
+    compile files('libs/universal-image-loader-1.8.4.jar')
+    compile files('libs/universal-image-loader-1.9.3-with-sources.jar')
 }
