下载相关文件更新补充 1.0

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".activity.AppDetailsActvity"></activity>
         <activity android:name=".activity.CollectActivity">
         </activity>
+        <service android:name=".activity.DownloadService"></service>
     </application>
 
 </manifest>
