--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.jude:rollviewpager:1.2.9'
     compile files('libs/universal-image-loader-1.8.4.jar')
     compile files('libs/universal-image-loader-1.9.3-with-sources.jar')
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
