--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".activity.AppDetailsActvity"></activity>
         <activity android:name=".activity.CollectActivity"></activity>
+        <service android:name=".activity.DownloadService"></service>
     </application>
 
 </manifest>
