断点续传文件更新

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.AppDetailsActvity"></activity>
-        <activity android:name=".activity.CollectActivity"></activity>
+        <activity android:name=".activity.CollectActivity">
+        </activity>
         <service android:name=".activity.DownloadService"></service>
     </application>
 
